[package]
name = "mboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.8"
lru = "0.7.5"
bumpalo = { version = "3.10.0", features = ["boxed", "collections"] }
thiserror = "1.0.31"
num = "0.4.0"
